Swap photo gallery URLs: move /photos to /photos2025, move /photo2026 to /photos

--- a/26.html
+++ b/26.html
@@ -7,14 +7,14 @@ permalink: /26/
 <head>
   <meta charset="utf-8">
   <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; url=https://qy.co/photo2026/">
-  <link rel="canonical" href="https://qy.co/photo2026/">
+  <meta http-equiv="refresh" content="0; url=https://qy.co/photos/">
+  <link rel="canonical" href="https://qy.co/photos/">
   <script>
-    window.location.href = "https://qy.co/photo2026/";
+    window.location.href = "https://qy.co/photos/";
   </script>
 </head>
 <body>
-  <p>Redirecting to <a href="https://qy.co/photo2026/">photo gallery</a>...</p>
+  <p>Redirecting to <a href="https://qy.co/photos/">photo gallery</a>...</p>
 </body>
 </html>
 
