--- a/index.html
+++ b/index.html
@@ -33,36 +33,23 @@ layout: default
     {% assign base_url = site.url %}
     {% endif %}
     
-    // Photo gallery images from photos.html
+    // Photo gallery images from photo2026.html (now at /photos/)
     var photoImages = [
-      "{{ base_url }}/assets/bike.JPG",
-      "{{ base_url }}/assets/king.jpg",
-      "{{ base_url }}/assets/nyc.jpg",
-      "{{ base_url }}/assets/air.jpg",
-      "{{ base_url }}/assets/ken2.jpg",
-      "{{ base_url }}/assets/chi.jpg",
-      "{{ base_url }}/assets/tan.jpg",
-      "{{ base_url }}/assets/arg.jpg",
-      "{{ base_url }}/assets/ecu.jpg",
-      "{{ base_url }}/assets/ess.jpg",
-      "{{ base_url }}/assets/lag.jpg",
-      "{{ base_url }}/assets/mor.jpg",
-      "{{ base_url }}/assets/paris.jpg",
-      "{{ base_url }}/assets/mor3.png",
-      "{{ base_url }}/assets/power.jpg",
-      "{{ base_url }}/assets/viet.jpg",
-      "{{ base_url }}/assets/traf.jpg",
-      "{{ base_url }}/assets/tokyo2.jpg",
-      "{{ base_url }}/assets/fall.jpg",
-      "{{ base_url }}/assets/sof.jpg",
-      "{{ base_url }}/assets/tur.jpg",
-      "{{ base_url }}/assets/slo.jpg",
-      "{{ base_url }}/assets/mor1.jpg",
-      "{{ base_url }}/assets/cop.jpg",
-      "{{ base_url }}/assets/tha.jpg",
-      "{{ base_url }}/assets/pass.jpg",
-      "{{ base_url }}/assets/church.png",
-      "{{ base_url }}/assets/fujifilm.jpg"
+      "{{ base_url }}/assets-photo2026/nuns.jpg",
+      "{{ base_url }}/assets-photo2026/7.jpg",
+      "{{ base_url }}/assets-photo2026/iguazu.jpg",
+      "{{ base_url }}/assets-photo2026/room.jpg",
+      "{{ base_url }}/assets-photo2026/masi.jpg",
+      "{{ base_url }}/assets-photo2026/ephesus.jpg",
+      "{{ base_url }}/assets-photo2026/hk.jpg",
+      "{{ base_url }}/assets-photo2026/japan.jpg",
+      "{{ base_url }}/assets-photo2026/pyramids.jpg",
+      "{{ base_url }}/assets-photo2026/airchina.jpg",
+      "{{ base_url }}/assets-photo2026/pak.jpg",
+      "{{ base_url }}/assets-photo2026/ghana.jpg",
+      "{{ base_url }}/assets-photo2026/tan.jpg",
+      "{{ base_url }}/assets-photo2026/met.jpg",
+      "{{ base_url }}/assets-photo2026/camera.jpeg"
     ];
     
     // Prefetch photos using link prefetch (browser-friendly)
