--- a/photo2026.html
+++ b/photo2026.html
@@ -1,6 +1,9 @@
 ---
 layout: default		
-permalink: /photos/		
+permalink: /photos/
+title: Photos - Qasar Younis
+description: "Photography is not like painting...you must know with intuition when to click the camera." -HCB
+image: /assets-photo2026/nuns.jpg
 ---		
 <script>		
 var imageGallery = [		
