--- a/26.html
+++ b/26.html
@@ -6,7 +6,23 @@ permalink: /26/
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Redirecting...</title>
+  <title>Photos - Qasar Younis</title>
+  <meta name="description" content="Photography is not like painting...you must know with intuition when to click the camera. -HCB">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://qy.co/photos/">
+  <meta property="og:title" content="Photos - Qasar Younis">
+  <meta property="og:description" content="Photography is not like painting...you must know with intuition when to click the camera. -HCB">
+  <meta property="og:image" content="https://qy.co/assets-photo2026/nuns.jpg">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@qasar">
+  <meta name="twitter:title" content="Photos - Qasar Younis">
+  <meta name="twitter:description" content="Photography is not like painting...you must know with intuition when to click the camera. -HCB">
+  <meta name="twitter:image" content="https://qy.co/assets-photo2026/nuns.jpg">
+  
   <meta http-equiv="refresh" content="0; url=https://qy.co/photos/">
   <link rel="canonical" href="https://qy.co/photos/">
   <script>
