--- a/photo2026.html
+++ b/photo2026.html
@@ -1,7 +1,7 @@
 ---
 layout: default		
 permalink: /photos/
-title: Photos - Qasar Younis
+title: qy.co/26
 description: "Photography is not like painting...you must know with intuition when to click the camera. -HCB"
 image: /assets-photo2026/nuns.jpg
 ---		
