Optimize image for WhatsApp preview (173KB, 1200x800) and add og:image dimensions meta tags

--- a/photo2026.html
+++ b/photo2026.html
@@ -3,7 +3,9 @@ layout: default
 permalink: /photos/
 title: qy.co/26
 description: "Photography is not like painting...you must know with intuition when to click the camera. -HCB"
-image: /assets-photo2026/nuns.jpg
+image: /assets-photo2026/nuns-preview.jpg
+image_width: 1200
+image_height: 800
 ---		
 <script>		
 var imageGallery = [		
