--- a/26.html
+++ b/26.html
@@ -14,14 +14,16 @@ permalink: /26/
   <meta property="og:url" content="https://qy.co/photos/">
   <meta property="og:title" content="qy.co/26">
   <meta property="og:description" content="Photography is not like painting...you must know with intuition when to click the camera. -HCB">
-  <meta property="og:image" content="https://qy.co/assets-photo2026/nuns.jpg">
+  <meta property="og:image" content="https://qy.co/assets-photo2026/nuns-preview.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="800">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@qasar">
   <meta name="twitter:title" content="qy.co/26">
   <meta name="twitter:description" content="Photography is not like painting...you must know with intuition when to click the camera. -HCB">
-  <meta name="twitter:image" content="https://qy.co/assets-photo2026/nuns.jpg">
+  <meta name="twitter:image" content="https://qy.co/assets-photo2026/nuns-preview.jpg">
   
   <meta http-equiv="refresh" content="0; url=https://qy.co/photos/">
   <link rel="canonical" href="https://qy.co/photos/">
