Add Twitter-optimized image (1200x628) for X preview cards

--- a/photo2026.html
+++ b/photo2026.html
@@ -6,6 +6,9 @@ description: "Photography is not like painting...you must know with intuition wh
 image: /assets-photo2026/nuns-preview.jpg
 image_width: 1200
 image_height: 800
+twitter_image: /assets-photo2026/nuns-twitter.jpg
+twitter_image_width: 1200
+twitter_image_height: 628
 ---		
 <script>		
 var imageGallery = [		
